kubernetes/mediaplayback/tunarr/tunarr-network.yaml
---
# Service to be used by Traefik and Tailscale Ingress to access the Tunarr Web UI
apiVersion: v1
kind: Service
metadata:
  name: tunarr
  namespace: mediaplayback
spec:
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/name: tunarr
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tunarr-authless
  namespace: mediaplayback
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`tunarr.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: tunarr
          port: 8000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tunarr-authenticated
  namespace: mediaplayback
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`tunarr.timo.be`)
      kind: Rule
      services:
        - name: tunarr
          port: 8000
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tunarr-tailscale
  namespace: mediaplayback
  annotations:
    # Instead of exposing as a machine, expose it as a Tailscale Service
    tailscale.com/proxy-group: tailscale-services
spec:
  defaultBackend:
    service:
      name: tunarr
      port:
        number: 8000
  ingressClassName: tailscale
  tls:
    - hosts:
        - tunarr
